--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,5 @@
 baseURL = 'https://example.org/'
 languageCode = 'en-us'
+defaultContentLanguage = 'de'
 title = 'Sesselwerkstatt'
 theme = 'ananke'
