--- a/hugo.toml
+++ b/hugo.toml
@@ -3,3 +3,12 @@ languageCode = 'en-us'
 defaultContentLanguage = 'de'
 title = 'Sesselwerkstatt'
 theme = 'ananke'
+
+[menu]
+  [[menu.main]]
+    name = "Home"
+    url = "/"
+    weight = 1
+
+[params]
+    mainSections = ["posts"]
