--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://msteinha.github.io/Sesselwerkstatt/'
 languageCode = 'en-us'
 defaultContentLanguage = 'de'
 title = 'Sesselwerkstatt'
