--- a/hugo.toml
+++ b/hugo.toml
@@ -27,3 +27,4 @@ theme = 'ananke'
 
 [params]
     mainSections = ["posts"]
+    description = "Wiener Geflecht - Bespannung: in Handarbeit und mit hochwertigen Materialien werden alte Möbel zu neuem Leben erweckt."
