--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://msteinha.github.io/Sesselwerkstatt/'
+baseURL = 'https://sesselwerkstatt.com'
 languageCode = 'en-us'
 defaultContentLanguage = 'de'
 title = 'Sesselwerkstatt'
